[tool.poetry]
name = "pygolf-api"
version = "0.1.0"
description = "PyGolf API"
authors = ["arslee07 <mail@arslee.me>", "igorechek06 <me@igorek.dev>"]
readme = "README.md"
packages = [{include = "pygolf_api"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
